<resources>
    <string name="app_name">Meersani</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="favorites">Favorites</string>

    <string name="movies_banner">Movies Banner</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See all</string>
    <string name="upcoming">Upcoming</string>
    <string name="on_air">On Air</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="today_airing">Today Airing</string>
    <string name="detail_item_banner">Detail Item Banner</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="cast">Cast</string>
    <string name="back">Back</string>
    <string name="dummy_text">\t\tGet a list of movies in theatres. This is a release type query that looks for all movies that have a release type of 2 or 3 within the specified date range.You can optionally specify a region prameter which will narrow the search to only look for theatrical release dates within the specified country.</string>
    <string name="detail_text_format">\t\t%s</string>
    <string name="runtime_format">%s min</string>
    <string name="read_more">Read More</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
    <string name="production">Production</string>
    <string name="recommendations">Recommendations</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="hide">Hide</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="today_release">Today Release</string>
    <string name="change_language">Change Language</string>
    <string name="daily_reminder_summary">Remind you everyday at 7am</string>
    <string name="today_release_reminder">Inform you about Today Released Movies every 8am</string>
    <string name="change_lang_summary">Change App Language</string>
    <string name="app_desc">Movies and Series Catalogue App</string>
    <string name="rating_image">Rating Image</string>

    <string-array name="language_name">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>

    <string-array name="language_name_value">
        <item>en</item>
        <item>id</item>
    </string-array>

</resources>
