<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.fragment.MoviesFragment">

        <com.github.florent37.shapeofview.shapes.DiagonalView
            android:id="@+id/img_banner_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_diagonal_angle="2"
            app:shape_diagonal_direction="left"
            app:shape_diagonal_position="bottom">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movies_banner"
                android:scaleType="centerCrop"
                tools:src="@drawable/film" />

        </com.github.florent37.shapeofview.shapes.DiagonalView>

        <TextView
            android:id="@+id/text_banner_title"
            style="@style/BannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:text="@string/movies"
            app:layout_constraintBottom_toBottomOf="@id/img_banner_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_banner_layout" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:contentDescription="@string/settings"
            android:elevation="@dimen/elevation"
            android:src="@drawable/ic_cog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/search"
            android:elevation="@dimen/elevation"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_settings" />

        <!--        Now Playing -->

        <TextView
            android:id="@+id/text_now_playing"
            style="@style/SubHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/now_playing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_banner_layout" />

        <TextView
            android:id="@+id/btn_text_see_all_now_playing"
            style="@style/ButtonTextSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/see_all"
            app:layout_constraintBottom_toBottomOf="@id/text_now_playing"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_now_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/btn_text_see_all_now_playing"
            app:layout_constraintStart_toStartOf="@id/text_now_playing"
            app:layout_constraintTop_toBottomOf="@id/text_now_playing"
            tools:listitem="@layout/primary_list_item" />

        <!--        Upcoming -->

        <TextView
            android:id="@+id/text_upcoming"
            style="@style/SubHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/upcoming"
            app:layout_constraintStart_toStartOf="@id/rv_list_now_playing"
            app:layout_constraintTop_toBottomOf="@id/rv_list_now_playing" />

        <TextView
            android:id="@+id/btn_text_see_all_upcoming"
            style="@style/ButtonTextSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/see_all"
            app:layout_constraintBottom_toBottomOf="@id/text_upcoming"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_upcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/btn_text_see_all_upcoming"
            app:layout_constraintStart_toStartOf="@id/text_upcoming"
            app:layout_constraintTop_toBottomOf="@id/text_upcoming"
            tools:listitem="@layout/normal_list_item" />

        <!--        Popular -->

        <TextView
            android:id="@+id/text_popular_movies"
            style="@style/SubHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/popular"
            app:layout_constraintStart_toStartOf="@id/rv_list_upcoming"
            app:layout_constraintTop_toBottomOf="@id/rv_list_upcoming" />

        <TextView
            android:id="@+id/btn_text_see_all_popular_movies"
            style="@style/ButtonTextSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/see_all"
            app:layout_constraintBottom_toBottomOf="@id/text_popular_movies"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_popular_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/btn_text_see_all_popular_movies"
            app:layout_constraintStart_toStartOf="@id/text_popular_movies"
            app:layout_constraintTop_toBottomOf="@id/text_popular_movies"
            tools:listitem="@layout/normal_list_item" />

        <!--        Top Rated -->

        <TextView
            android:id="@+id/text_top_rated_movies"
            style="@style/SubHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/top_rated"
            app:layout_constraintStart_toStartOf="@id/rv_list_popular_movies"
            app:layout_constraintTop_toBottomOf="@id/rv_list_popular_movies" />

        <TextView
            android:id="@+id/btn_text_see_all_top_rated_movies"
            style="@style/ButtonTextSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:text="@string/see_all"
            app:layout_constraintBottom_toBottomOf="@id/text_top_rated_movies"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_top_rated_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/btn_text_see_all_top_rated_movies"
            app:layout_constraintStart_toStartOf="@id/text_top_rated_movies"
            app:layout_constraintTop_toBottomOf="@id/text_top_rated_movies"
            tools:listitem="@layout/normal_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>