<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.DetailCategoriesActivity">

    <com.github.florent37.shapeofview.shapes.DiagonalView
        android:id="@+id/img_banner_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_diagonal_angle="2"
        app:shape_diagonal_direction="left"
        app:shape_diagonal_position="bottom">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movies_banner"
            android:scaleType="centerCrop"
            tools:src="@drawable/film" />

    </com.github.florent37.shapeofview.shapes.DiagonalView>

    <TextView
        android:id="@+id/text_banner_title"
        style="@style/BannerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:text="@string/movies"
        app:layout_constraintBottom_toBottomOf="@id/img_banner_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_banner_layout" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/settings"
        android:elevation="@dimen/elevation"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/settings"
        android:elevation="@dimen/elevation"
        android:src="@drawable/ic_cog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/search"
        android:elevation="@dimen/elevation"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <!--    Content -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_banner_layout"
        tools:listitem="@layout/vertical_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>