<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.fragment.FavoritesFragment">

        <com.github.florent37.shapeofview.shapes.DiagonalView
            android:id="@+id/img_banner_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_diagonal_angle="2"
            app:shape_diagonal_direction="left"
            app:shape_diagonal_position="bottom">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movies_banner"
                android:scaleType="centerCrop"
                tools:src="@drawable/projector" />

        </com.github.florent37.shapeofview.shapes.DiagonalView>

        <TextView
            android:id="@+id/text_banner_title"
            style="@style/BannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:text="@string/favorites"
            app:layout_constraintBottom_toBottomOf="@id/img_banner_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_banner_layout" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:contentDescription="@string/settings"
            android:elevation="@dimen/elevation"
            android:src="@drawable/ic_cog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/favorites_tab_layout"
            style="@style/FavoriteTabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_banner_layout"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorFullWidth="false" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/favorites_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorites_tab_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>